feat: finish the linked accounts manager